// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// tag::declarations[]
syntax = "proto3";

package customer.view;

import "customer/domain/customer_domain.proto";
import "customer/api/customer_api.proto";
import "akkaserverless/annotations.proto";
import "google/protobuf/any.proto";

// end::declarations[]

// tag::service-event-sourced[]
message ByNameRequest {
  string customer_name = 1;
}

service CustomerByName {
  option (akkaserverless.codegen) = { // <1>
    view: {}
  };

  rpc ProcessCustomerCreated(domain.CustomerCreated) returns (api.Customer) { // <2>
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "customers" // <3>
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true // <4>
    };
  }

  rpc ProcessCustomerNameChanged(domain.CustomerNameChanged) returns (api.Customer) { // <2>
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "customers" // <5>
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true // <6>
    };
  }

  rpc ProcessCustomerAddressChanged(domain.CustomerAddressChanged) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "customers"
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "customers" // <5>
     };
     option (akkaserverless.method).view.update = {
       table: "customers"
       transform_updates: true // <6>
     };
  };

  rpc GetCustomers(ByNameRequest) returns (stream api.Customer) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM customers WHERE name = :customer_name"
    };
  }
}
// end::service-event-sourced[]

// tag::service-topic[]
service CustomerByNameFromTopic {
  rpc ProcessCustomerCreated(domain.CustomerCreated) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      topic: "customers" // <1>
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true
    };
  }

  rpc ProcessCustomerNameChanged(domain.CustomerNameChanged) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      topic: "customers"
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true
    };
  }

  rpc ProcessCustomerAddressChanged(domain.CustomerAddressChanged) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      topic: "customers"
    };
    option (akkaserverless.method).view.update = {
      table: "customers"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (api.Customer) {
    option (akkaserverless.method).eventing.in = {
      topic: "customers"
     };
     option (akkaserverless.method).view.update = {
       table: "customers"
       transform_updates: true
     };
  };

  rpc GetCustomers(ByNameRequest) returns (stream api.Customer) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM customers WHERE name = :customer_name"
    };
  }
}
// end::service-topic[]
